# rnaseq_demo_webapp

./: .env  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile.backend  Dockerfile.frontend
rnaseq_viz/backend/: data_processing.py  main.py  task_manager.py
rnaseq_viz/common/: s3_manager.py  utils.py
rnaseq_viz/config/: config.py  log_config.py
rnaseq_viz/frontend/: auth.py  frontend.py  login.py  main.py  viz_utils.py
test_data/: test_input_data.csv
